--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,4 +1,5 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml" th:charset="${'UTF-8'}"
+      xmlns:th="https://www.thymeleaf.org" th:lang="${#locale}" lang="fr"
       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <body>
 <th:block th:fragment="header">
@@ -16,11 +17,15 @@
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link"  th:href="@{/signup}" th:text="#{label.pages.signup}"></a>
                 </li>
-                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/logement/{id}(id= ${#authentication.getName()})}" th:text="#{label.pages.myHouses}"></a>
+                <li class="nav-item" sec:authorize="hasRole('USER')">
+                    <a class="nav-link"  th:href="@{/reservation}" th:text="#{label.form.Reservations}"></a>
                 </li>
-                <li class="nav-item" sec:authorize="hasRole('ROLE_USER')">
-                    <a class="nav-link" th:href="@{/reservation/{id}(id= ${#authentication.getName()})}" th:text="#{label.form.Reservations}"></a>
+                <li class="nav-item" sec:authorize="${hasRole('ADMIN')}">
+                    <a class="nav-link" th:href="@{/logement}">
+                        <span th:text="#{label.pages.myHouses}"></span>
+                        <span th:if="${activeRes > 0}" class="badge badge-danger" sec:authorize="${hasRole('ADMIN')}" th:text="${activeRes}"></span>
+                    </a>
+
                 </li>
             </ul>
             <a class="h3 mr-4 text-light" th:href="@{/profile/{id}(id=${#authentication.getName()})}" sec:authorize="isFullyAuthenticated()">
@@ -28,7 +33,7 @@
             </a>
             <div class="my-md-0"  sec:authorize="isFullyAuthenticated()">
                 <a class="btn btn-danger icon-btn" th:href="@{/logout}">
-                    <span th:text="#{label.pages.logout}"></span><i class="text-light fa fa-sign-out-alt" ></i>
+                    <span th:utext="#{label.pages.logout}"></span><i class="text-light fa fa-sign-out-alt" ></i>
                 </a>
             </div>
         </div>
