--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,7 +17,7 @@
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link"  th:href="@{/signup}" th:text="#{label.pages.signup}"></a>
                 </li>
-                <li class="nav-item" sec:authorize="hasRole('USER')">
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link"  th:href="@{/reservation}" th:text="#{label.form.Reservations}"></a>
                 </li>
                 <li class="nav-item" sec:authorize="${hasRole('ADMIN')}">
